# AI-DBA-Copilot

./: .env.example  .gitignore  AI DBA Copilot.code-workspace  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  validate-all-services.sh
.github/templates/: issue.md  pr.md
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: AI_DBA_Copilot_Enterprise_Blueprint.docx  AI_DBA_Copilot_Enterprise_Blueprint.md  AI_DBA_Copilot_Functional_Design.md  AI_DBA_Copilot_Project_Plan.docx  AI_DBA_Copilot_TDD.md  Detailed_Component_Designs.md
memory-layer/: README.md
plan/: PLAN-AUDIT-2026-07-13.md  PRD-ai-dba-copilot-mvp.md  PRD-automated-remediation.md  PRD-copilot-ui.md  PRD-detection-engine.md  PRD-jira-integration.md  PRD-mcp-integration-layer.md  PRD-memory-layer.md  PRD-predictive-analytics.md  PRD-recommendation-engine.md  feature-engineering-tdd-1.md  gen_plan.py  imp-phase-1-foundation.md  imp-phase-10-remediation.md  imp-phase-11-hardening.md  imp-phase-2-memory-layer.md  imp-phase-3-mcp-layer.md  imp-phase-4-detection-engine.md  imp-phase-5-jira-integration.md  imp-phase-6-recommendation-engine.md  imp-phase-7-semantic-search.md  imp-phase-8-predictive-analytics.md  imp-phase-9-copilot-ui.md  test_heredoc.md  write_full_plan.py
src/: README.md
src/copilot-ui/: .gitignore  Dockerfile  jest.config.js  package.json  tailwind.config.ts
src/detection-engine/: Dockerfile  main.py  requirements.txt
src/jira-integration/: Dockerfile  main.py  requirements.txt
src/mcp-layer/: main.py  (+2 more)
tests/: README.md
(+16 files in other folders)
